[dist] Remove [StaticInstall] because it's now included in [@Author::PERLANCAR] 0.58

--- a/dist.ini
+++ b/dist.ini
@@ -4,8 +4,8 @@ name=App-BrowserOpenUtils
 
 [@Author::PERLANCAR]
 
+:version=0.58
 [Prereqs]
 strict=0
 warnings=0
 Browser::Open=0
-[StaticInstall]
