--- a/dist.ini
+++ b/dist.ini
@@ -2,10 +2,23 @@ version=0.001
 
 name=App-BrowserOpenUtils
 
-[@Author::PERLANCAR]
+[GenPericmdScript / GenPericmdScript open-browser]
+url=/App/BrowserOpenUtils/open_browser
+enable_log=1
+default_log_level=info
+read_config=0
+read_env=0
 
-:version=0.58
+[@Author::PERLANCAR]
+:version=0.594
+
 [Prereqs]
 strict=0
 warnings=0
 Browser::Open=0
+Log::ger=0.027
+
+[Prereqs / DevelopX_spec]
+-phase=develop
+-relationship=x_spec
+Rinci=1.1.90
