--- a/dist.ini
+++ b/dist.ini
@@ -1,4 +1,4 @@
-version=0.002
+version=0.003
 
 name=App-BrowserOpenUtils
 
@@ -10,9 +10,10 @@ read_config=0
 read_env=0
 
 [@Author::PERLANCAR]
-:version=0.594
+:version=0.598
 
 [Prereqs]
+perl=5.010001
 strict=0
 warnings=0
 Browser::Open=0
